# agent-rules-kit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_rules_kit/: cli.py  findings.py  governance.py  redaction.py
tests/: test_cli.py  test_diagnostic_fixtures.py  test_findings.py  test_governance.py  test_path_boundaries.py  test_redaction.py
tests/fixtures/repositories/multi-agent-overlap/: AGENTS.md  CLAUDE.md  GEMINI.md
tests/fixtures/repositories/multi-agent-overlap/.cursor/rules/: agent-rules.mdc
tests/fixtures/repositories/multi-agent-overlap/.github/: copilot-instructions.md
tests/fixtures/repositories/multi-agent-overlap/.github/instructions/: agents.instructions.md
tests/fixtures/repositories/risky-instructions/: AGENTS.md
tests/fixtures/repositories/single-agent/: AGENTS.md
